--- a/Back-End/BrainServices.Api/BrainServices.Api/appsettings.Development.json
+++ b/Back-End/BrainServices.Api/BrainServices.Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MainDb": "Server=localhost;Port=5434;Database=BrainServicesDB;User Id=postgres;Password=letmein;"
   }
+
 }
